k8s-webapp/webapp-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hkwebapp-dep
  namespace: hkanonik
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: hk-webapp
        image: registry-ci.playpit.by/helloworld-hkanonik:22 
        ports:
        - name: http-webapp
          containerPort: 8080
