k8s-webapp/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hkwebapp-svc
  namespace: hkanonik
  labels:
    app: webapp
spec:
  selector:
    app: webapp
  ports:
  - name: hkwebapp-svcp
    port: 80
    targetPort: http-webapp
