k8s-webapp/webapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hkwebapp-ing
  namespace: hkanonik
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /helloworld-ws/
spec:
  rules:
  - host: hkanonik-app.k8s.playpit.by
    http:
      paths:
      - path: /
        backend:
          serviceName: hkwebapp-svc
          servicePort: hkwebapp-svcp
